--- a/src/style/entrance.css
+++ b/src/style/entrance.css
@@ -15,18 +15,24 @@
   }
   
   .ayat-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 60%;
     background: rgba(0, 0, 0, 0.745);
     padding: 20px;
     border-radius: 10px;
   }
   
   h1 {
-    font-size: 38px;
+    font-size: clamp(24px, 3vw, 40px);
     color: #ff9f43;
   }
   
   p {
-    font-size: 28px;
+    font-size: clamp(18px, 2vw, 26px);
   }
   
   span {
@@ -37,12 +43,18 @@
   .loading-container {
     text-align: center;
     background: rgba(0, 0, 0, 0.6);
-    padding: 20px;
+    padding: 20px 40px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 60%;
   }
   
   .progress-bar {
-    width: 200px;
+    width: 85%;
     height: 10px;
     background: rgba(255, 255, 255, 0.3);
     border-radius: 5px;
