--- a/src/style/LanguageSelection.css
+++ b/src/style/LanguageSelection.css
@@ -8,18 +8,27 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 40px;
+    border: 1px solid red;
   }
   
   .language-list {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 10px;
     margin-bottom: 20px;
+    border: 1px solid red;
+    width: 50%;
+    padding: 20px;
   }
   
   .language-option {
     display: flex;
     align-items: center;
+    width: 40%;
     gap: 10px;
     padding: 10px 20px;
     border-radius: 8px;
