--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,39 +1,44 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-nav{
-    width: 100%;
-    padding: 15px 0px;
+.sidebar {
+    width: 250px;
     background-color: #593A28;
     color: white;
+    padding: 20px;
+    position: fixed;
+    height: 100vh;
+    transition: transform 0.3s ease;
+    z-index: 1000;
+  }
+  
+  .sidebar .logo img {
+    width: 45%;
+    margin-bottom: 20px;
+  }
+  
+  .nav-links {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-nav .logo img{
-    width:19px;
-    margin-left: 40px;
-    cursor: pointer;
-}
-ul{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 20px;
-    margin-right: 40px;
-}
-ul .link{
+    flex-direction: column;
+    gap: 15px;
+  }
+  
+  .link {
     text-decoration: none;
     color: white;
-    font-weight: 600;
-}
-ul * {
-    transition: scale 300ms, filter 300ms;
-}
-ul:has(:hover) :not(:hover){
-    scale: 0.9;
-}
+    font-weight: 500;
+    transition: color 0.2s;
+  }
+  
+  .link.active,
+  .link:hover {
+    color: #00bcd4;
+  }
+  
+  @media (max-width: 768px) {
+    .sidebar {
+      transform: translateX(-100%);
+    }
+  
+    .sidebar.open {
+      transform: translateX(0);
+    }
+  }
+  
