--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 250px;
+  width: 200px;
   background-color: #593a28;
   color: white;
   padding: 20px;
@@ -39,7 +39,7 @@
   bottom: 0;
   height: 3px;
   width: 100%;
-  background: #00bcd4;
+  background: #54ADA2;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.3s ease;
@@ -47,7 +47,7 @@
 }
 
 .link:hover {
-  color: #00bcd4;
+  color: #54ADA2;
 }
 
 .link:hover::before {
@@ -55,7 +55,7 @@
 }
 
 .link.active {
-  color: #00bcd4;
+  color: #54ADA2;
 }
 
 .link.active::before {
