--- a/src/style/more.css
+++ b/src/style/more.css
@@ -11,13 +11,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
-  gap: 40px;
+  flex-direction: column;
+  gap: 20px;
   flex-wrap: wrap;
 }
 
 .menu-item {
-  width: 300px;
+  width: 250px;
   border:1px solid #593A28;
   display: flex;
   align-items: center;
@@ -71,5 +71,11 @@
     width: 32px;
     height: 32px;
     font-size: 16px;
+  }
+}
+
+@media (max-width: 350px) {
+  .menu-item{
+    width: 80%;
   }
 }
