--- a/src/style/QuestionCard.css
+++ b/src/style/QuestionCard.css
@@ -118,3 +118,52 @@
     }
   }
   
+
+
+
+  /*/////////////////////////// Modal style css ////////////////////////////////// */
+
+.questionModal{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.644);
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.middle{
+    width: 50%;
+    background: white;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    gap: 30px;
+    text-align: center;
+}
+.middle button{
+    width: 200px;
+    margin: 5px;
+    padding: 10px 0px;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 12px;
+    cursor: pointer;
+}
+.middle button:active{
+    scale: 0.98;
+}
+.middle .rozi{
+    background: #3b6644;
+    color: white;
+    border: 2px solid #3b6644;
+}
+.middle .bekor{
+    border: 2px solid gray;
+    color: rgb(86, 86, 86);
+}
