--- a/src/style/stage.css
+++ b/src/style/stage.css
@@ -4,6 +4,52 @@
   padding: 16px;
   font-family: sans-serif;
 }
+.shadow {
+  position: fixed;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #618765;
+  color: white;
+  overflow: visible;
+  z-index: 1;
+  right: 20px;
+  border: none;
+  font-size: 18px;
+}
+
+.shadow::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #618765;
+  border-radius: 50%;
+  animation: pulse 1.5s infinite;
+  z-index: -1; /* orqada bo'lsin */
+  top: 0;
+  left: 0;
+  opacity: 0.6;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 0.6;
+  }
+  50% {
+    opacity: 0.4;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
+
 
 .intro-text {
   text-align: center;
