--- a/src/style/homePage.css
+++ b/src/style/homePage.css
@@ -4,9 +4,10 @@
     background-color: #F7F0E9;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center !important;
     flex-direction: column;
     gap:20px;
+    margin-top: -40px;
 }
 .home_title{
     color: #121212;
@@ -26,6 +27,7 @@
     text-align: center;
     color: #121212;
     font-size: clamp(14px, 4vw, 20px);
+    width: 80%;
 }
 .home_btn{
     display: flex;
