--- a/src/style/homePage.css
+++ b/src/style/homePage.css
@@ -7,7 +7,6 @@
     justify-content: center !important;
     flex-direction: column;
     gap:20px;
-    margin-top: -40px;
 }
 .home_title{
     color: #121212;
@@ -15,7 +14,7 @@
     text-align: center;
 }
 .home_img{
-    width: 25%;
+    width: clamp(160px, 50vw, 260px);
     display: flex;
     align-items: center;
     justify-content: center;
