--- a/src/style/stage.css
+++ b/src/style/stage.css
@@ -4,7 +4,7 @@
   padding: 16px;
   font-family: sans-serif;
 }
-.shadow {
+.shadow3 {
   position: fixed;
   cursor: pointer;
   width: 40px;
@@ -17,12 +17,13 @@
   color: white;
   overflow: visible;
   z-index: 1;
-  left: 260px;
+  top: 20px;
+  right: 20px;
   border: none;
   font-size: 18px;
 }
 
-.shadow::before {
+.shadow3::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -53,7 +54,7 @@
 
 .intro-text {
   text-align: center;
-  font-size: 28px;
+  font-size: clamp(14px,7vw, 28px);
   margin-bottom: 16px;
   color: #444;
 }
