--- a/src/style/QuestionCard.css
+++ b/src/style/QuestionCard.css
@@ -6,16 +6,17 @@
   
   .card {
     width: 100%;
+    margin-top: 50px;
     max-width: 450px;
     background: #fff;
     border-radius: 12px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     padding: 20px;
   }
-  
+
   .header h2 {
     margin-bottom: 4px;
-    font-size: 1.6rem;
+    font-size: clamp(1rem, 6vw, 1.8rem);
     color: #5e3f2c;
     text-align: center;
   }
@@ -28,7 +29,9 @@
   }
   
   .back-btn {
-    position: absolute;
+    position: fixed;
+    top: 20px;
+    right: 20px;
     cursor: pointer;
     width: 40px;
     height: 40px;
