--- a/src/style/about.css
+++ b/src/style/about.css
@@ -6,7 +6,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 30px;
+  margin-left: 20px;
+  padding-bottom: 20px;
   gap: 10px;
   flex-direction: column;
 }
