--- a/src/style/entrance.css
+++ b/src/style/entrance.css
@@ -4,7 +4,7 @@
 .ayat-quiz-container {
   width: 100vw;
   height: 100vh;
-  background: url("../assets/image/AyatLoadingImg.jpg") center/cover no-repeat;
+  background: url("/public/images/entrance/AyatLoadingImg.webp") center/cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
